# Evo-Engine

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: builder_api.rs  csv_export.rs  custom_problem.rs  knapsack.rs  tsp.rs
src/: lib.rs  main.rs
src/algorithms/: cmaes.rs  differential_evolution.rs  ga.rs  mod.rs  nsga2.rs
src/island/: mod.rs
src/operators/: binary.rs  crossover.rs  mod.rs  mutation.rs  permutation.rs  selection.rs
src/problems/: combinatorial.rs  mod.rs  multi_objective.rs  single_objective.rs
tests/: algorithms.rs  operators.rs
