[package]
name = "evo-engine"
version = "0.2.0"
edition = "2021"
description = "Evolutionary computation framework for Rust"
license = "MIT"
keywords = ["evolutionary", "optimization", "genetic-algorithm", "metaheuristic", "nsga2"]
categories = ["algorithms", "science"]

[features]
default = ["parallel", "serialize"]
parallel = ["rayon"]
serialize = ["serde", "serde_json"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
ordered-float = "4.2"
thiserror = "1"

# Optional deps behind feature flags
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5"
